# espio

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
espio/: Kconfig.projbuild
espio/include/espio/: audio_err.h  button.h  button_err.h  button_types.h  display.h  display_err.h  err.h  espio.h  log.h  sd.h
espio/include/espio/drivers/: amp_max98357a.h  button_gpio.h  mic_inmp441.h  mic_pdm_generic.h  mic_tdm_generic.h
espio/internal/: amp_internal.h  audio_i2s_hal.h  mic_internal.h
espio/src/: espio_version.c
espio/src/audio/: amp.c
espio/src/audio/drivers/: mic_adc_generic.c  mic_tdm_generic.c
espio/src/display/: display.c
espio/src/sd/: sd.c
include/espio/: audio_amp.h  audio_dac.h  audio_duplex.h  audio_mic.h  audio_types.h  display_colors.h  err_log.h  mic_types.h  sd_err.h
include/espio/drivers/: button_mcp23017.h  display_ili9341.h  mic_adc_generic.h
internal/: audio_ctrl_gpio.h
src/audio/: amp_tx.c  audio_ctrl_gpio.c  audio_duplex.c  audio_i2s_hal.c  mic.c  mic_rx.c
src/audio/drivers/: amp_max98357a.c  mic_inmp441.c  mic_pdm_generic.c
src/button/: button.c
src/button/drivers/: button_gpio.c  button_mcp23017.c
src/common/: err.c
src/display/drivers/: ili9341.c
